syntax = "proto3";

package metro_boulot_dodo.proto;

import "google/protobuf/empty.proto";
import "data.proto";

service DataService {
    rpc GetGares (google.protobuf.Empty) returns (metro_boulot_dodo.data.Gares);
    rpc GetIntergares (google.protobuf.Empty) returns (metro_boulot_dodo.data.Intergares);
    rpc GetStations (google.protobuf.Empty) returns (metro_boulot_dodo.data.Stations);
    rpc GetLignes (google.protobuf.Empty) returns (metro_boulot_dodo.data.Lignes);
}